--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dev_dependencies:
   cupertino_icons: ^1.0.2
   sqflite: ^2.0.0+3
   path_provider: ^2.0.1
+  provider: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
