--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dev_dependencies:
   sqflite: ^2.0.0+3
   path_provider: ^2.0.1
   provider: ^5.0.0
+  youtube_player_flutter: ^8.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
